      - Genes are ignored if they have no reads within or nearby instead of
        blindly processing all annotated genes.

SIGNIFICANT USER-VISIBLE CHANGES

    * Drop readBed() and writeWiggle() reimplementation of rtracklayer
      import.bed(), and export.bw() / export.wig().
    * Drop broken NonMap argument of polymeraseWave().
    * Verbose flag now works for HMM using C functions.  The large volume of C
      messages can be silenced as originally intended instead of always being
      verbose.
    * Replace sweave package vignette with Rmd for easier user interaction.
      Less effort should be needed to maintain the vignette due to simpler
      syntax, and fewer obtuse LaTeX errors.
    * Disable default plotting of getTxDensity().  Only functions whose names
      start with 'plot' automatically generate plots.
    * getTxDensity() is faster and returns exact values instead of trapezoidal
      approximation.
    * windowAnalysis() now has no upper limit on stepSize.

BUG FIXES AND IMPROVEMENTS

    * Fix windowAnalysis() "subscript out of bounds" error, and add corner case
      of empty ranges.
    * Fix corner cases of breakTranscriptsOnGenes() and combineTranscripts()
      failing when no break or join errors are detected.
    * One can now control makeConsensusAnnotations() multi-core parallelism.
      Remove the hard coded 10 CPU cores.
    * Move all packages from Depends to Imports to fix Travis-CI bootstrap
      errors.
    * Add unit test suite using testthat:
      - All bugs discovered since version 1.7.0 now have corresponding
        regression tests.
      - Add lintr in unit tests to preserve code style.
    * New maintainer in response to dead upstream.
    * Add contributor instructions in README.
    * Add GitHub continuous integration using Travis-CI, covr, and codecov.
      - Removed debugging parameters and their corresponding debug print
        statements from functions.  For troubleshooting faults, it is better to