@@ -22,6 +22,7 @@ SIGNIFICANT USER-VISIBLE CHANGES
     * Drop readBed() and writeWiggle() reimplementation of rtracklayer
       import.bed(), and export.bw() / export.wig().
     * Drop broken NonMap argument of polymeraseWave().
+    * Drop buggy resampling arguments of getTxDensity().
     * Verbose flag now works for HMM using C functions.  The large volume of C
       messages can be silenced as originally intended instead of always being
       verbose.
